--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 TELEGRAM_BOT_TOKEN=6931421420:AAHzTR7Vi2gDkm9tuePvgLlNtgJLSYKPZZU
-SSH_HOST=192.168.113.205
+SSH_HOST=192.168.0.106
 SSH_PORT=22
-SSH_USERNAME=kali
-SSH_PASSWORD=kali
+SSH_USERNAME=master
+SSH_PASSWORD=root
+POSTGRESQL_USER=postgres
+POSTGRESQL_PASSWORD=Qq12345
+POSTGRESQL_HOST=192.168.0.106
+POSTGRESQL_PORT=5432
+POSTGRESQL_DB=python_bot_db
