--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-TELEGRAM_BOT_TOKEN=6931421420:AAHzTR7Vi2gDkm9tuePvgLlNtgJLSYKPZZU
-SSH_HOST=192.168.0.106
-SSH_PORT=22
-SSH_USERNAME=master
-SSH_PASSWORD=root
-POSTGRESQL_USER=postgres
-POSTGRESQL_PASSWORD=Qq12345
-POSTGRESQL_HOST=192.168.0.106
-POSTGRESQL_PORT=5432
-POSTGRESQL_DB=python_bot_db
+TELEGRAM_BOT_TOKEN=
+SSH_HOST=
+SSH_PORT=
+SSH_USERNAME=
+SSH_PASSWORD=
+POSTGRESQL_USER=
+POSTGRESQL_PASSWORD=
+POSTGRESQL_HOST=
+POSTGRESQL_PORT=
+POSTGRESQL_DB=
